update docs directory

--- a/src/app/reusable-components/personalized-header/personalized-header.component.html
+++ b/src/app/reusable-components/personalized-header/personalized-header.component.html
@@ -10,7 +10,7 @@
             <a [class]="genSelectedPageLink('/')" aria-current="page" href="">Home</a>
           </li>
           <li class="nav-item">
-            <a [class]="genSelectedPageLink('/chi-siamo')" href="chi-siamo">Chi siamo?</a>
+            <a [class]="genSelectedPageLink('/chi-siamo')" href="who-we-are">Chi siamo?</a>
           </li>
           <li class="nav-item">
             <a [class]="genSelectedPageLink('/contattaci')" href="contattaci">Contattaci</a>
