--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -1,5 +1,5 @@
 main {
-    background-image: url("../../image/background.png");
+    background-image: url("../../image/background.webp");
     height: calc(100% - 6vh);
     background-size: cover;
 }
