--- a/src/app/pages/service/service.component.html
+++ b/src/app/pages/service/service.component.html
@@ -1,8 +1,7 @@
 <main class="background-color" style=" height: calc(100% - 6vh);"> 
-    <div style="max-width: 600px; margin: 0 auto;">
-        <h3 style="text-align: center; padding-top: 10px; margin-bottom: 20px;">Quali servizi forniamo ai nostri clienti:</h3>
+    <h3 style="text-align: center; padding-top: 10px; padding-bottom: 15px;">Quali servizi forniamo ai nostri clienti:</h3>    <div class="button-div">
         <button (click)="rotateIcon('masonryArrow')" class="btn btn-primary btn-custom" type="button" data-bs-toggle="collapse" data-bs-target="#masonry"
-            aria-expanded="false" aria-controls="masonry" style="width: 100%; margin-bottom: 10px;">
+            aria-expanded="false" aria-controls="masonry">
             Muratura
             <i id="masonryArrow" class="bi bi-arrow-up"></i>
         </button>
@@ -20,9 +19,9 @@
             </ul>
         </div>
     </div>
-    <div style="max-width: 600px; margin: 0 auto;">
+    <div class="button-div">
         <button (click)="rotateIcon('plumbingArrow')" class="btn btn-primary btn-custom" type="button" data-bs-toggle="collapse" data-bs-target="#plumbing"
-            aria-expanded="false" aria-controls="plumbing" style="width: 100%; margin-bottom: 10px;">
+            aria-expanded="false" aria-controls="plumbing">
             Idraulica
             <i id="plumbingArrow" class="bi bi-arrow-up"></i>
         </button>
@@ -38,9 +37,9 @@
             </ul>
         </div>
     </div>
-    <div style="max-width: 600px; margin: 0 auto;">
+    <div class="button-div">
         <button (click)="rotateIcon('electricalArrow')" class="btn btn-primary btn-custom" type="button" data-bs-toggle="collapse" data-bs-target="#electrical"
-            aria-expanded="false" aria-controls="electrical" style="width: 100%; margin-bottom: 10px;">
+            aria-expanded="false" aria-controls="electrical">
             Elettrico
             <i id="electricalArrow" class="bi bi-arrow-up"></i>
         </button>
@@ -53,9 +52,9 @@
             </ul>
         </div>
     </div>
-    <div style="max-width: 600px; margin: 0 auto;">
+    <div class="button-div">
         <button (click)="rotateIcon('gardeningArrow')" class="btn btn-primary btn-custom" type="button" data-bs-toggle="collapse" data-bs-target="#gardening"
-            aria-expanded="false" aria-controls="gardening" style="width: 100%; margin-bottom: 10px;">
+            aria-expanded="false" aria-controls="gardening">
             Giardinaggio
             <i id="gardeningArrow" class="bi bi-arrow-up"></i>
         </button>
