--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -23,7 +23,7 @@ button {
     letter-spacing: 5px;
     text-transform: uppercase;
     cursor: pointer;
-    color: #2c9caf;
+    color: #2c2c2c;
     transition: all 800ms;
     font-size: 15px;
     position: relative;
