--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,57 +4,63 @@
 @import 'bootstrap/scss/bootstrap';
 
 .background-color {
-    background-color: #d4d4d4;
+  background-color: rgb(221, 221, 221);
 }
 
 .container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: calc(100% - 6vh);
-    min-width: 100vw;
-    padding: 0px !important;
-    margin: 0px !important;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: calc(100% - 6vh);
+  min-width: 100vw;
+  padding: 0px !important;
+  margin: 0px !important;
 }
 
 .info {
-    margin-top: 5px;
-    margin-bottom: 5px;
-    background-color: #fff;
-    max-width: 90%;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  max-width: 800px; /* Imposta la larghezza massima del contenitore del testo */
+  width: 100%;
+  box-sizing: border-box; /* Include il padding e il bordo nella larghezza totale */
+  padding: 20px;
+  overflow-y: auto; /* Abilita lo scroll verticale se il testo supera l'altezza massima */
+  overflow-x: hidden; /* Nasconde lo scroll orizzontale */
+  text-align: left; /* Allinea il testo a sinistra per una lettura migliore */
+  background-color: #f9f9f9; /* Colore di sfondo leggero per maggiore leggibilità */
+  border-radius: 8px; /* Angoli arrotondati per un aspetto più elegante */
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Ombra leggera per un effetto di sollevamento */
 }
 
- ul li {
-    margin-bottom: 10px;
-    word-wrap: break-word; /* Aggiunto per gestire parole lunghe */
+.modal-header {
+  border-bottom: 1px solid #ddd; /* Linea di separazione tra l'intestazione e il corpo del contenuto */
+  margin-bottom: 10px;
+  padding-bottom: 10px;
 }
 
 
-/* Aggiungi questo CSS alla tua definizione di stili */
+ul li {
+  margin-bottom: 10px;
+  word-wrap: break-word; 
+}
 
 .navbar {
-    position: relative;
-    z-index: 1000;
-    border-bottom-right-radius: 10px;
-    border-bottom-left-radius: 10px;
-  }
-  
-  .collapse.show {
-    position: relative;
-    z-index: 1100;
-  }
-  
-  .collapse {
-    position: relative;
-    z-index: 100;
-  }
-  
-  main {
-    position: relative;
-    z-index: 1;
-  }
-  
+  position: relative;
+  z-index: 1000;
+  border-bottom-right-radius: 10px;
+  border-bottom-left-radius: 10px;
+}
+
+.collapse.show {
+  position: relative;
+  z-index: 1100;
+}
+
+.collapse {
+  position: relative;
+  z-index: 100;
+}
+
+main {
+  position: relative;
+  z-index: 1;
+}
