--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -12,7 +12,7 @@
         </tr>
         <tr>
             <td style="text-align: center;">
-                <button onclick="location.href='/contattaci'">Contattaci</button>
+                <button onclick="location.href='/be-pintus-costruzioni/contattaci'">Contattaci</button>
             </td>
         </tr>
     </table>
